--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,8 @@
-# fly.toml app configuration file generated for mail-server on 2025-02-05T18:18:17+01:00
+# fly.toml app configuration file generated on 2025-02-06T23:14:04+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'mail-server'
 primary_region = 'cdg'
 
 [build]
@@ -17,18 +16,18 @@ primary_region = 'cdg'
   processes = ['app']
 
 [[services]]
+  protocol = 'tcp'
   internal_port = 25
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
-  protocol = "tcp"
 
   [[services.ports]]
     port = 25
 
   [[services.ports]]
-    handlers = ["tls", "http"]
     port = 465
+    handlers = ['tls', 'http']
 
   [[services.ports]]
     port = 587
