--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 DATABASE_URL=postgresql://<username>:<password>@<host>/<database>?sslmode=require
-AUTHORIZATION=<authorization>
+USERNAME=<username>
+PASSWORD=<password>
 HOSTNAME=mail-server.example.com
 API_PORT=3000
 EMAIL_EXPIRATION_TIME=1440
