--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -6,7 +6,7 @@ command=sh -c "echo READY && read line && kill -SIGQUIT $PPID"
 events=PROCESS_STATE_STOPPED,PROCESS_STATE_EXITED,PROCESS_STATE_FATAL
 
 [program:postfix]
-command=postfix start-fg
+command=sh -c "until nc -z localhost 3000; do sleep 1; done; postfix start-fg"
 autostart=true
 autorestart=false
 startretries=0
